# yannisloaf_cc

./: .gitignore  Cargo.toml  model.js
frontend/: index.html
src/: main.rs
src/inputs/: mod.rs
src/twitch/: chat.rs  irc_parse.rs  mod.rs
src/web/: irc.rs
