[package]
name = "yannisloaf_cc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix = "0.12.0"
actix-web = "4.0.0-beta.10"
serde = { version = "1.0.130", features = ["derive"] }
websocket = "0.26.2"
expiring_map = "0.1.0"